Fix the alignment of the add new project button

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -34,3 +34,6 @@ header
 
 .container
   max-width: 960px
+
+.page-header .btn
+  margin: 5px 0
